Dillo project
=============================================================================

Here we list changes that are relatively significant and/or visible to the
user. For a history of changes in full detail, see our Mercurial repository
at http://hg.dillo.org/dillo


dillo-3.0.4 [not released yet]

+- OPTGROUP and INS elements.
 - Some HTML5 elements, etc.
   Patches: corvid
+- Make embedding into other applications more reliable (BUG#1127).
 - Add search from address bar.
   Patches: Johannes Hofmann
+- Better scaling (down) of images, even with consideration of gamma
   correction.
 - Fixed (possibly security) problem of FltkImgBuf caused by integer overflow
   (BUG#1129).
 - Some linebreaking fixes.
 - Added white_bg_replacement preference.
   Patches: Sebastian Geerken
+- Fix a set of bugs reported by Oulu Univ. Secure Programming Group
   (HTML parsing, URL resolution, GIF processing, etc.)
   Patch: Jorge Arellano Cid
+- Fix compiling on Hurd.
   Patch: Pino Toscano
+- Avoid Dpid children becoming zombies.
   Patch: Jorge Arellano, J. Gaffney
+- HTML5 WBR element.
 - Fix compiling on IRIX with MIPSpro compiler.
   Patches: corvid, Sebastian Geerken

-----------------------------------------------------------------------------

dillo-3.0.3 [April 17, 2013]

+- Support for CSS display property
 - Replace polling in DNS with a pipe.
 - Packed trie to optimize hyphenator memory consumption.
 - Fix crash in datauri dpi.
 - Speed up DNS requests when ipv6 isn't enabled.
   Patches: Johannes Hofmann
+- Fix image input coordinates (BUG#1070)
 - When location bar is given focus, temporarily show panels if hidden
   (BUG#1093).
 - Fix bug where data URI has charset but no media type.
 - Bug meter line number fix for bare carriage returns.
 - Add some more info to various bug meter messages.
 - For text selection, fix releasing mouse button outside of boundary.
 - While selecting text, moving cursor outside viewport will scroll it.